<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.al.smashingnpr.MainActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tabFeed1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnBack1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnBack1text"
                        android:visibility="gone"
                        android:onClick="btnBack1Click"/>
                    <TextView
                    android:id="@+id/txtTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTitle1text"
                    android:visibility="gone"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:paddingTop="25dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txtBody1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBody1text"
                        android:visibility="gone"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:paddingTop="10dp" />
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lstFeed1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabFeed2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnBack2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnBack2text"
                        android:visibility="gone"
                        android:onClick="btnBack2Click"/>
                    <TextView
                        android:id="@+id/txtTitle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTitle2text"
                        android:visibility="gone"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:paddingTop="25dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txtBody2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBody2text"
                        android:visibility="gone"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:paddingTop="10dp" />
                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lstFeed2"
                        android:paddingTop="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabFeed3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnBack3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnBack3text"
                        android:visibility="gone"
                        android:onClick="btnBack3Click"/>
                    <TextView
                        android:id="@+id/txtTitle3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTitle3text"
                        android:visibility="gone"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:paddingTop="25dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txtBody3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBody3text"
                        android:visibility="gone"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:paddingTop="10dp"
                        />
                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lstFeed3"
                        android:paddingTop="10dp" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
